--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-flip-move": "^2.4.2",
     "react-motion": "^0.4.4",
     "react-youtube": "^7.0.1",
-    "request-promise": "^3.0.0"
+    "request-promise": "^3.0.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
