--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,6 @@
     "prefer-arrow-callback": 1,
     "no-nested-ternary": 0,
     "max-len": 0,
-    "react/jsx-no-bind":0,
+    "react/jsx-no-bind":0
   }
 }
