completely overhauled build system

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-node_modules/
-.idea/
-**/.DS_Store
-**/.sass-cache
-**/.sass-cache/*
-**/ver.txt
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
 node_modules
-awscli-bundle
-*.sass-cache*
+
+# production
+
+# misc
+.idea/
 .DS_Store
+npm-debug.log
 *.log
+**/.DS_Store
