--- a/package.json
+++ b/package.json
@@ -1,11 +1,59 @@
 {
   "name": "bebo-chat",
-  "version": "0.9.1",
-  "description": "chat room module for the bebo app",
-  "homepage": "https://bebo.com",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bebo-rooms/chat.git"
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "autoprefixer": "6.4.0",
+    "babel-core": "6.14.0",
+    "babel-eslint": "6.1.2",
+    "babel-jest": "15.0.0",
+    "babel-loader": "6.2.5",
+    "babel-plugin-transform-class-properties": "6.11.5",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-regenerator": "6.14.0",
+    "babel-plugin-transform-runtime": "6.15.0",
+    "babel-preset-latest": "6.14.0",
+    "babel-preset-react": "6.11.1",
+    "babel-runtime": "6.11.6",
+    "case-sensitive-paths-webpack-plugin": "1.1.3",
+    "chalk": "1.1.3",
+    "connect-history-api-fallback": "1.3.0",
+    "cross-spawn": "4.0.0",
+    "css-loader": "0.24.0",
+    "detect-port": "1.0.0",
+    "eslint": "3.4.0",
+    "eslint-loader": "1.5.0",
+    "eslint-plugin-flowtype": "2.11.4",
+    "eslint-plugin-import": "1.12.0",
+    "eslint-plugin-jsx-a11y": "2.2.1",
+    "eslint-plugin-react": "5.2.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "filesize": "3.3.0",
+    "fs-extra": "0.30.0",
+    "gzip-size": "3.0.0",
+    "html-loader": "0.4.3",
+    "html-webpack-plugin": "2.22.0",
+    "http-proxy-middleware": "0.17.1",
+    "jest": "15.1.0",
+    "json-loader": "0.5.4",
+    "node-sass": "^3.8.0",
+    "object-assign": "4.1.0",
+    "opn": "4.0.2",
+    "path-exists": "3.0.0",
+    "postcss": "^5.1.2",
+    "postcss-loader": "0.11.1",
+    "promise": "7.1.1",
+    "recursive-readdir": "2.0.0",
+    "rimraf": "2.5.4",
+    "sass-loader": "^4.0.1",
+    "strip-ansi": "3.0.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "1.15.1",
+    "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
     "deep-find": "0.0.0-alpha",
@@ -13,45 +61,28 @@
     "react": "^15.3.1",
     "react-cluster": "^0.1.2",
     "react-dom": "^15.3.1",
-    "react-simple-fetch": "^0.1.0",
-    "request-promise": "^4.1.1",
-    "whatwg-fetch": "^1.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.14.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.0",
-    "eslint-plugin-react": "^6.1.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-htmlmin": "^2.0.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.9",
-    "pump": "^1.0.1",
-    "webpack": "^1.13.2",
-    "webpack-stream": "^3.2.0",
-    "yargs": "^5.0.0"
+    "react-simple-fetch": "^0.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp develop",
-    "dist": "gulp build --e prod",
-    "serve": "gulp develop",
-    "serve:dist": "gulp develop --e prod"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "jest --watch --env=jsdom"
   },
-  "author": "",
-  "license": "ISC"
+  "eslintConfig": {
+    "extends": "./config/eslint.js"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^[./a-zA-Z0-9$_-]+\\.(jpg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm)$": "<rootDir>/config/jest/FileStub.js",
+      "^[./a-zA-Z0-9$_-]+\\.css$": "<rootDir>/config/jest/CSSStub.js"
+    },
+    "scriptPreprocessor": "<rootDir>/config/jest/transform.js",
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/(build|docs|node_modules)/"
+    ],
+    "testEnvironment": "node"
+  }
 }
