--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react": "^15.3.1",
     "react-cluster": "^0.1.2",
     "react-dom": "^15.3.1",
+    "react-linkify": "^0.1.3",
     "react-simple-fetch": "^0.1.1"
   },
   "scripts": {
