--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "bebo-react": "^0.1.1",
     "deep-find": "0.0.0-alpha",
     "moment": "^2.14.1",
     "react": "^15.3.1",
